--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -69,6 +69,7 @@ Data Entry - Event Frames
     <table id = "table" class = "table">
         <thead>
             <tr>
+                <th></th>
                 <th>{{ tableHeader }}</th>
                 <th>Start Timestamp</th>
                 <th>End Timestamp</th>
@@ -85,14 +86,15 @@ Data Entry - Event Frames
                         {% endif %}
                         {% if childrenClass == "EventFrame" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard", eventFrameId = child.id(),
-                                selectedEventFrameTemplateId = child.EventFrameTemplateId) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
+                                selectedEventFrameTemplateId = child.EventFrameTemplateId) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         {% elif childrenClass == "EventFrameTemplate" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.select", selectedClass = "EventFrame",
-                                selectedId = child.id(), elementId = parent.id()) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
+                                selectedId = child.id(), elementId = parent.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         {% else %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.select", selectedClass = child.__class__.__name__,
-                                selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a>&nbsp;{{ name }}</td>
+                                selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         {% endif %}
+                        <td>{{ name }}</td>
                         <td>{{ child.StartTimestamp }}</td>
                         <td>{{ child.EndTimestamp }}</td>
                     </tr>
@@ -116,6 +118,7 @@ Data Entry - Event Frames
             ],
             "columns":
             [
+            null,
                 null,
                 null,
                 null
