--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
                 {% endif %}
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("elements.selectElement") }}">Elements</a></li>
+                        <li><a href = "{{ url_for("elements.select") }}">Elements</a></li>
                         <li><a href = "{{ url_for("eventFrames.select") }}">Event Frames</a></li>
                         <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
                     </ul>
