--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -9,13 +9,13 @@
 {% block page_content %}
 <div>
     <ol class="breadcrumb">
-        <li><a href = "{{ url_for("elements.selectElement", className = "Root", id = None) }}">..</a></li>
-        <li><a href = "{{ url_for("elements.selectElement", className = element.ElementTemplate.Site.Enterprise.__class__.__name__,
-            id = element.ElementTemplate.Site.Enterprise.EnterpriseId) }}">{{ element.ElementTemplate.Site.Enterprise.Name }}</a></li>
-        <li><a href = "{{ url_for("elements.selectElement", className = element.ElementTemplate.Site.__class__.__name__,
-            id = element.ElementTemplate.Site.SiteId) }}">{{ element.ElementTemplate.Site.Name }}</a></li>
-        <li><a href = "{{ url_for("elements.selectElement", className = element.ElementTemplate.__class__.__name__,
-            id = element.ElementTemplate.ElementTemplateId) }}">{{ element.ElementTemplate.Name }}</a></li>
+        <li><a href = "{{ url_for("elements.select", selectedClass = "Root", selectedId = None) }}">..</a></li>
+        <li><a href = "{{ url_for("elements.select", selectedClass = element.ElementTemplate.Site.Enterprise.__class__.__name__,
+            selectedId = element.ElementTemplate.Site.Enterprise.EnterpriseId) }}">{{ element.ElementTemplate.Site.Enterprise.Name }}</a></li>
+        <li><a href = "{{ url_for("elements.select", selectedClass = element.ElementTemplate.Site.__class__.__name__,
+            selectedId = element.ElementTemplate.Site.SiteId) }}">{{ element.ElementTemplate.Site.Name }}</a></li>
+        <li><a href = "{{ url_for("elements.select", selectedClass = element.ElementTemplate.__class__.__name__,
+            selectedId = element.ElementTemplate.ElementTemplateId) }}">{{ element.ElementTemplate.Name }}</a></li>
         <li class = "active">{{ element.Name }}</li>
     </ol>
     <div class = "page-header">
@@ -83,7 +83,7 @@
         </tbody>
     </table>
     <div class = "page-header">
-            <h1>{{ element.Name }} <small>Attributes</small></h1>
+        <h1>{{ element.Name }} <small>Attributes</small></h1>
     </div>
     <br>
     <table id = "attributesTable" class = "table">
